// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataVisualization /> should render properly 1`] = `
.emotion-0 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  overflow-y: hidden;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: #252525;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-bottom: 1px;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus,
.emotion-3 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-3:hover svg,
.emotion-3.focus-visible:focus svg,
.emotion-3 .noop svg {
  opacity: 1;
}

.emotion-3[aria-disabled=true],
.emotion-3 .noop {
  color: #808080;
}

.emotion-3:hover {
  background-color: #2e2e2e;
}

.emotion-4 {
  position: relative;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  background-color: #252525;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-11 {
  font-size: 18px;
  line-height: 21px;
}

.emotion-12 {
  margin: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  max-width: 600px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px;
  background-color: #4a4a4a;
  border-radius: 2px;
}

.emotion-15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-16 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-17 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #b3b3b3;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-19 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-19,
.emotion-19:hover,
.emotion-19:visited,
.emotion-19 .noop {
  background-color: #808080;
}

.emotion-19:hover,
.emotion-19 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-19[aria-disabled=true],
.emotion-19 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "alignItems": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "height": "100%",
        }
      }
    >
      <div
        className="emotion-2"
      >
        <button
          aria-label="Filters"
          className="emotion-3"
          onClick={[Function]}
          title="Filters"
          type="button"
        >
          <div
            className="emotion-4"
          >
            <svg
              data-file-name="filter.svg"
              height={20}
            />
          </div>
        </button>
        <div
          className="emotion-5"
        />
      </div>
    </div>
    <div
      className="emotion-6"
    >
      <VisualizerNavigation />
      <div
        className="emotion-7"
      >
        <div
          className="emotion-8"
        >
          <div
            className="emotion-9"
          >
            <div
              className="emotion-10"
            >
              <h2
                className="emotion-11"
              >
                Create a Data Visualization
              </h2>
              <p
                className="emotion-12"
              >
                Data visualizations are representations of specific information from dataset. Adjusting the filters will allow you to dynamically view the effect they have on the search results. Data visualization can be shared with other users in the projects by exporting and then uploading.
              </p>
            </div>
          </div>
          <div
            className="emotion-13"
          >
            <div
              className="emotion-14"
            >
              <svg
                data-file-name="facet.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-15"
            >
              <div
                className="emotion-16"
              >
                Facet
              </div>
              <div
                className="emotion-17"
              >
                Shows the range of values and the number of each for one for a selected field.
              </div>
            </div>
            <div
              className="emotion-18"
            >
              <button
                className="emotion-19"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-13"
          >
            <div
              className="emotion-14"
            >
              <svg
                data-file-name="range.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-15"
            >
              <div
                className="emotion-16"
              >
                Range
              </div>
              <div
                className="emotion-17"
              >
                Shows the min, max, mean, median, and mode for the numerical values of a selected field.
              </div>
            </div>
            <div
              className="emotion-18"
            >
              <button
                className="emotion-19"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-13"
          >
            <div
              className="emotion-14"
            >
              <svg
                data-file-name="histogram.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-15"
            >
              <div
                className="emotion-16"
              >
                Histogram
              </div>
              <div
                className="emotion-17"
              >
                Shows the distribution of assets within value groups.
              </div>
            </div>
            <div
              className="emotion-18"
            >
              <button
                className="emotion-19"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataVisualization /> should render properly 2`] = `
.emotion-0 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  overflow-y: hidden;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: #252525;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-bottom: 1px;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus,
.emotion-3 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-3:hover svg,
.emotion-3.focus-visible:focus svg,
.emotion-3 .noop svg {
  opacity: 1;
}

.emotion-3[aria-disabled=true],
.emotion-3 .noop {
  color: #808080;
}

.emotion-3:hover {
  background-color: #2e2e2e;
}

.emotion-4 {
  position: relative;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 16px;
  overflow: auto;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
}

.emotion-9 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 16px;
}

.emotion-9,
.emotion-9:hover,
.emotion-9:visited,
.emotion-9 .noop {
  background-color: #808080;
}

.emotion-9:hover,
.emotion-9 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-9[aria-disabled=true],
.emotion-9 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

.emotion-12 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  margin-right: 16px;
}

.emotion-12,
.emotion-12:hover,
.emotion-12:visited,
.emotion-12 .noop {
  background-color: #808080;
}

.emotion-12:hover,
.emotion-12 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-12[aria-disabled=true],
.emotion-12 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "alignItems": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "height": "100%",
        }
      }
    >
      <div
        className="emotion-2"
      >
        <button
          aria-label="Filters"
          className="emotion-3"
          onClick={[Function]}
          title="Filters"
          type="button"
        >
          <div
            className="emotion-4"
          >
            <svg
              data-file-name="filter.svg"
              height={20}
            />
          </div>
        </button>
        <div
          className="emotion-5"
        />
      </div>
    </div>
    <div
      className="emotion-6"
    >
      <VisualizerNavigation />
      <div
        className="emotion-7"
      >
        <div
          className="emotion-8"
        >
          <button
            aria-label="Add Chart"
            className="emotion-9"
            onClick={[Function]}
            type="button"
          >
            <div
              className="emotion-10"
            >
              <div
                className="emotion-11"
              >
                <svg
                  data-file-name="plus.svg"
                  height={20}
                />
              </div>
              Add Chart
            </div>
          </button>
          <button
            className="emotion-12"
            onClick={[Function]}
            type="button"
          >
            Delete All
          </button>
        </div>
        <div
          className="emotion-13"
        >
          <Charts
            charts={
              Array [
                Object {
                  "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
                  "type": "facet",
                },
              ]
            }
            dispatch={[Function]}
            layouts={Object {}}
            setLayouts={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataVisualization /> should render properly 3`] = `
.emotion-0 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  overflow-y: hidden;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: #252525;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-bottom: 1px;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus,
.emotion-3 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-3:hover svg,
.emotion-3.focus-visible:focus svg,
.emotion-3 .noop svg {
  opacity: 1;
}

.emotion-3[aria-disabled=true],
.emotion-3 .noop {
  color: #808080;
}

.emotion-3:hover {
  background-color: #2e2e2e;
}

.emotion-4 {
  position: relative;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  background-color: #252525;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-11 {
  font-size: 18px;
  line-height: 21px;
}

.emotion-12 {
  margin: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  max-width: 600px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-14 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-14,
.emotion-14:hover,
.emotion-14:visited,
.emotion-14 .noop {
  background-color: #808080;
}

.emotion-14:hover,
.emotion-14 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-14[aria-disabled=true],
.emotion-14 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px;
  background-color: #4a4a4a;
  border-radius: 2px;
}

.emotion-17 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-18 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-19 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #b3b3b3;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "alignItems": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "height": "100%",
        }
      }
    >
      <div
        className="emotion-2"
      >
        <button
          aria-label="Filters"
          className="emotion-3"
          onClick={[Function]}
          title="Filters"
          type="button"
        >
          <div
            className="emotion-4"
          >
            <svg
              data-file-name="filter.svg"
              height={20}
            />
          </div>
        </button>
        <div
          className="emotion-5"
        />
      </div>
    </div>
    <div
      className="emotion-6"
    >
      <VisualizerNavigation />
      <div
        className="emotion-7"
      >
        <div
          className="emotion-8"
        >
          <div
            className="emotion-9"
          >
            <div
              className="emotion-10"
            >
              <h2
                className="emotion-11"
              >
                Create a Data Visualization
              </h2>
              <p
                className="emotion-12"
              >
                Data visualizations are representations of specific information from dataset. Adjusting the filters will allow you to dynamically view the effect they have on the search results. Data visualization can be shared with other users in the projects by exporting and then uploading.
              </p>
            </div>
            <div
              className="emotion-13"
            >
              <button
                className="emotion-14"
                onClick={[Function]}
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
          <div
            className="emotion-15"
          >
            <div
              className="emotion-16"
            >
              <svg
                data-file-name="facet.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-17"
            >
              <div
                className="emotion-18"
              >
                Facet
              </div>
              <div
                className="emotion-19"
              >
                Shows the range of values and the number of each for one for a selected field.
              </div>
            </div>
            <div
              className="emotion-20"
            >
              <button
                className="emotion-14"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-15"
          >
            <div
              className="emotion-16"
            >
              <svg
                data-file-name="range.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-17"
            >
              <div
                className="emotion-18"
              >
                Range
              </div>
              <div
                className="emotion-19"
              >
                Shows the min, max, mean, median, and mode for the numerical values of a selected field.
              </div>
            </div>
            <div
              className="emotion-20"
            >
              <button
                className="emotion-14"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-15"
          >
            <div
              className="emotion-16"
            >
              <svg
                data-file-name="histogram.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-17"
            >
              <div
                className="emotion-18"
              >
                Histogram
              </div>
              <div
                className="emotion-19"
              >
                Shows the distribution of assets within value groups.
              </div>
            </div>
            <div
              className="emotion-20"
            >
              <button
                className="emotion-14"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DataVisualization /> should render properly 4`] = `
.emotion-0 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  overflow-y: hidden;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: #252525;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-bottom: 1px;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus,
.emotion-3 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-3:hover svg,
.emotion-3.focus-visible:focus svg,
.emotion-3 .noop svg {
  opacity: 1;
}

.emotion-3[aria-disabled=true],
.emotion-3 .noop {
  color: #808080;
}

.emotion-3:hover {
  background-color: #2e2e2e;
}

.emotion-4 {
  position: relative;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: #252525;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 16px;
  background-color: #252525;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-11 {
  font-size: 18px;
  line-height: 21px;
}

.emotion-12 {
  margin: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  max-width: 600px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px;
  background-color: #4a4a4a;
  border-radius: 2px;
}

.emotion-15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-16 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-17 {
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #b3b3b3;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-19 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-19,
.emotion-19:hover,
.emotion-19:visited,
.emotion-19 .noop {
  background-color: #808080;
}

.emotion-19:hover,
.emotion-19 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-19[aria-disabled=true],
.emotion-19 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "alignItems": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "height": "100%",
        }
      }
    >
      <div
        className="emotion-2"
      >
        <button
          aria-label="Filters"
          className="emotion-3"
          onClick={[Function]}
          title="Filters"
          type="button"
        >
          <div
            className="emotion-4"
          >
            <svg
              data-file-name="filter.svg"
              height={20}
            />
          </div>
        </button>
        <div
          className="emotion-5"
        />
      </div>
    </div>
    <div
      className="emotion-6"
    >
      <VisualizerNavigation />
      <div
        className="emotion-7"
      >
        <div
          className="emotion-8"
        >
          <div
            className="emotion-9"
          >
            <div
              className="emotion-10"
            >
              <h2
                className="emotion-11"
              >
                Create a Data Visualization
              </h2>
              <p
                className="emotion-12"
              >
                Data visualizations are representations of specific information from dataset. Adjusting the filters will allow you to dynamically view the effect they have on the search results. Data visualization can be shared with other users in the projects by exporting and then uploading.
              </p>
            </div>
          </div>
          <div
            className="emotion-13"
          >
            <div
              className="emotion-14"
            >
              <svg
                data-file-name="facet.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-15"
            >
              <div
                className="emotion-16"
              >
                Facet
              </div>
              <div
                className="emotion-17"
              >
                Shows the range of values and the number of each for one for a selected field.
              </div>
            </div>
            <div
              className="emotion-18"
            >
              <button
                className="emotion-19"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-13"
          >
            <div
              className="emotion-14"
            >
              <svg
                data-file-name="range.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-15"
            >
              <div
                className="emotion-16"
              >
                Range
              </div>
              <div
                className="emotion-17"
              >
                Shows the min, max, mean, median, and mode for the numerical values of a selected field.
              </div>
            </div>
            <div
              className="emotion-18"
            >
              <button
                className="emotion-19"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
          <div
            className="emotion-13"
          >
            <div
              className="emotion-14"
            >
              <svg
                data-file-name="histogram.svg"
                height={22}
              />
            </div>
            <div
              className="emotion-15"
            >
              <div
                className="emotion-16"
              >
                Histogram
              </div>
              <div
                className="emotion-17"
              >
                Shows the distribution of assets within value groups.
              </div>
            </div>
            <div
              className="emotion-18"
            >
              <button
                className="emotion-19"
                onClick={[Function]}
                type="button"
              >
                Create
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
